--- a/code/styles.css
+++ b/code/styles.css
@@ -1,17 +1,30 @@
-body {  background-image: url(backgroundplaceholder.png);
-    background-size: cover; }
+body {
+    background-image: url(backgroundplaceholder.png);
+    background-size: cover;
+}
 
 
 #animate {
-            width: 50px;
-            height: 50px;
-            position: relative;
-            background-color: red;
-        }
+    width: 50px;
+    height: 50px;
+    position: relative;
+    background-color: red;
+}
 
 #animate2 {
-            width: 50px;
-            height: 50px;
-            position: relative;
-            background-color: red;
-        }
+    width: 50px;
+    height: 50px;
+    position: relative;
+    background-color: red;
+}
+
+button {
+    background-color: #e7e7e7;
+    color: black;
+    border: 1;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    padding: 16px 16px;
+    border-radius: 50%;
+}
