--- a/code/styles.css
+++ b/code/styles.css
@@ -1,30 +1,45 @@
-body {
-    background-image: url(backgroundplaceholder.png);
-    background-size: cover;
-}
 
 
-#animate {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    background-color: red;
-}
-
-#animate2 {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    background-color: red;
+div {
+  width: 100px;
+  height: 100px;
+  background: red;
+  position: relative;
+  -webkit-animation: mymove 2s infinite;
+  -webkit-animation-play-state: paused;
+  animation: mymove 2s infinite;
+  animation-play-state: paused;
 }
 
 button {
     background-color: #e7e7e7;
     color: black;
-    border: 1;
     text-align: center;
     display: inline-block;
     font-size: 16px;
     padding: 16px 16px;
     border-radius: 50%;
 }
+
+@-webkit-keyframes mymove {
+  from {left: 0px;}
+  to {left: 200px;}
+}
+
+@keyframes mymove {
+  from {left: 0px;}
+  to {left: 200px;}
+}
+
+  nav {
+      display: flex;
+      align-items: left;
+      justify-content: left;
+      grid-area: nav;
+      font-family: ltc-italian-old-style-pro, verdana, serif;
+      font-weight: 300;
+      font-style: normal;
+      margin: 1px 1px 1px 1px;
+      padding: 0.5em 0.5em;
+
+  }
