--- a/code/styles.css
+++ b/code/styles.css
@@ -10,6 +10,20 @@ button {
     height: 50px;
 }
 
+
+.button2 {
+    background-color: #e7e7e7;
+    color: black;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    padding: 16px 16px;
+    border-radius: 30%;
+    width: 300px;
+    height: 50px;
+}
+
+
 nav {
     display: flex;
     align-items: left;
@@ -24,13 +38,21 @@ nav {
 }
 
 
-@-webkit-keyframes mymove1 {
-    from {
+/* Animation 1  - FLY*/
+
+@-webkit-keyframes fly {
+    0% {
         left: 0px;
     }
 
-    to {
-        left: 500px;
+    50% {
+        left: 100px;
+        transform: translate(0px, 0px);
+    }
+
+    100% {
+        left: 1000px;
+        transform: translate(0px, -200px);
     }
 }
 
@@ -38,18 +60,25 @@ nav {
     width: 200px;
     height: 300px;
     position: relative;
-    animation-name:
+    animation: fly 3s infinite;
     animation-play-state: paused;
-    background-image: url(../background/backgroundplaceholder.png);
+    background-image: url(./placeholder-01.svg);
 }
 
-@-webkit-keyframes mymove2 {
-    from {
-        left: 0px;
+
+/* Animation 2  - FADE IN FADE OUT */
+
+@-webkit-keyframes fadeinout {
+   0% {
+    opacity: 0;
     }
 
-    to {
-        left: 100px;
+    50% {
+        opacity: 1;
+        }
+
+    100% {
+    opacity: 0;
     }
 }
 
@@ -57,7 +86,231 @@ nav {
     width: 200px;
     height: 300px;
     position: relative;
-    animation: mymove2 5s infinite;
+    animation: fadeinout 5s infinite;
     animation-play-state: paused;
-    background-image: url(../background/backgroundplaceholder.png);
+    background-image: url(./placeholder-01.svg);
+}
+
+.walk {
+    width: 200px;
+    height: 300px;
+    position: relative;
+}
+
+/* Animation 3  - CHANGE COLOR */
+
+@-webkit-keyframes changecolor {
+    0% {
+        filter: invert(0%) sepia(99%) saturate(7429%) hue-rotate(319deg) brightness(83%) contrast(102%);
+    }
+
+    20% {
+        filter: invert(45%) sepia(41%) saturate(404%) hue-rotate(8deg) brightness(99%) contrast(89%);
+
+    }
+    40% {
+        filter: invert(98%) sepia(98%) saturate(607%) hue-rotate(323deg) brightness(99%) contrast(91%);
+
+
+    }
+    60% {
+        filter: invert(7%) sepia(10%) saturate(3743%) hue-rotate(332deg) brightness(99%) contrast(95%);
+
+    }
+    80% {
+        filter: invert(99%) sepia(56%) saturate(4553%) hue-rotate(295deg) brightness(100%) contrast(90%);
+
+    }
+
+     100% {
+        filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);;
+     }
+ }
+
+ .animation3 {
+     width: 200px;
+     height: 300px;
+     position: relative;
+     animation: changecolor 2s infinite;
+     animation-play-state: paused;
+     background-image: url(./placeholder-01.svg);
+ }
+
+
+ /* Animation 4 - ROLL*/
+
+
+@-webkit-keyframes roll {
+0% {
+    transform: translate3d(-200%, 0, 0) rotate3d(0, 0, 1, -360deg);
+}
+
+
+    100% {
+      transform: translate3d(200%, 0, 0) rotate3d(0, 0, 1, 360deg);
+    }
+  }
+
+  .animation4 {
+    width: 200px;
+    height: 300px;
+    position: relative;
+    animation: roll 4s infinite;
+    animation-play-state: paused;
+    background-image: url(./placeholder-01.svg);
+}
+
+/* Animation 5  - SPIN*/
+
+
+@-webkit-keyframes spin {
+    0% {
+        transform: rotateY(0deg);
+        left: 0px;
+    }
+
+
+    100% {
+            transform: rotateY(360deg);
+            left: 300px;
+        }
+      }
+
+      .animation5 {
+        width: 200px;
+        height: 300px;
+        position: relative;
+        animation: spin 2s infinite;
+        animation-play-state: paused;
+        background-image: url(./placeholder-01.svg);
+    }
+
+    /* Animation 6  - headstand*/
+
+
+@-webkit-keyframes headstand {
+    0% {
+        transform: rotatex(0deg);
+
+    }
+
+
+
+
+    100% {
+            transform: rotatex(180deg);
+
+        }
+      }
+
+      .animation6 {
+        width: 200px;
+        height: 300px;
+        position: relative;
+        animation: headstand 2s infinite;
+        animation-play-state: paused;
+        background-image: url(./placeholder-01.svg);
+    }
+
+
+        /* Animation 7 */
+
+
+@-webkit-keyframes jump {
+    from,
+    20%,
+    53%,
+    80%,
+    to {
+      -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+      -webkit-transform: translate3d(0, 0, 0);
+    }
+
+    40%,
+    43% {
+      -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+      -webkit-transform: translate3d(0, -30px, 0);
+    }
+
+    70% {
+      -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+      -webkit-transform: translate3d(0, -15px, 0);
+    }
+
+    90% {
+      -webkit-transform: translate3d(0, -4px, 0);
+    }
+
+      }
+
+      .animation7 {
+        width: 200px;
+        height: 300px;
+        position: relative;
+        animation: jump 2s infinite;
+        animation-play-state: paused;
+        background-image: url(./placeholder-01.svg);
+    }
+
+           /* Animation 8 */
+
+
+@-webkit-keyframes shake {
+        0%,
+        100% {
+          -webkit-transform: translateX(0);
+        }
+        10%,
+        30%,
+        50%,
+        70% {
+          -webkit-transform: translateX(-10px);
+        }
+        20%,
+        40%,
+        60% {
+          -webkit-transform: translateX(10px);
+        }
+        80% {
+          -webkit-transform: translateX(8px);
+        }
+        90% {
+          -webkit-transform: translateX(-8px);
+        }
+      }
+
+    .animation8 {
+        width: 200px;
+        height: 300px;
+        position: relative;
+        animation: shake 1s infinite;
+        animation-play-state: paused;
+        background-image: url(./placeholder-01.svg);
+    }
+
+
+  /* Animation 9 */
+
+
+@-webkit-keyframes puff {
+    0% {
+        -webkit-transform: scalex(1);
+        -webkit-filter: blur(0px);
+        opacity: 1;
+      }
+
+      100% {
+        -webkit-transform: scalex(2);
+        -webkit-filter: blur(100px);
+        opacity: 0;
+      }
+    }
+
+.animation9 {
+    width: 200px;
+    height: 300px;
+    position: relative;
+    animation: puff 5s infinite;
+    animation-play-state: paused;
+    background-image: url(./placeholder-01.svg);
 }
